
7) duplicate assassins and watchdogs were possible.  this is now prevented.

--------------------------------------
Release notes for version 3.13

1) removed dependency on xmlstarlet, as it has incompatible versions in the
   field and cannot be relied on to work.

--------------------------------------
Release notes for version 3.14 (pi)

1) install-init.sh now fails if HA/NOROOT exists.

2) a bug in appdservice-noroot.sh prevented it from running

3) the INITDEBUG option now creates log files owned by runuser.

4) the replication slave user now has least privilege.

5) the wildcard option in replicate.sh now works again.

--------------------------------------
Release notes for version 3.14.1 (more pi)

1) wildcard really working now.

--------------------------------------
Release notes for version 3.15

1) complete disable of dbop test in watchdog.sh


--------------------------------------
Release notes for version 3.16

1) a number of hard to diagnose HA failures were traced to a setting in the
   db.cnf.  sync_binlog=1 prevents the replication log and the innodb logs
   from being seen as inconsistent should the database crash.

2) the slave_pending_jobs_size_max setting needs to be there to allow the
   replication slave to run in parallel.

3) machine agent status is now reported by the controller init script

4) added options supporting mysql 5.7 parallel replication.

5) setmonitor.sh had an error if there was no crededential password

6) quoting problems arose in lib/conf.sh under certain conditions
   this required a modification in the fundamental runuser functions
   in lib/init.sh and lib/runuser.sh.

--------------------------------------
Release notes for version 3.17

1) more fragility with quoting has been eliminated.

2) the database logs are now saved and recreated whenever replicate is
   finalized.  this means that database logs will not be cluttered with
   historical information.

3) gtid mode is now enabled for the 5.7 databases.
